<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Analisis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_article">Article</string>
    <string name="title_account">Account</string>
    <string name="location">South Sulawesi, Indonesia</string>
    <string name="username">muhammadrifqi20001@gmail.com</string>
    <string name="bio">Always learning</string>
    <string name="company">Hasanuddin University</string>
    <string name="nama_lengkap">Muh. Rifqi Mu\'afa</string>
    <string name="article_title">Article Title</string>
    <string name="article_description">Description</string>
    <string name="article_date">Date</string>
    <string name="article_author">Author</string>
    <string name="tflite_failed_to_load_model_with_error">Image classifier failed to initialize. See error logs for details</string>
    <string name="hasil_analisis">Hasil Analisis :</string>
    <string name="inference">Inference</string>
    <string name="inference_time">Inference Time : %S ms</string>
    <string name="result_text">Result : %S (%.2f%%)</string>
    <string name="back">Okay</string>
    <string name="photo_name">Photo Name</string>
    <string name="delete_icon">Hapus</string>
    <string name="photo_result">Photo Result</string>
    <string name="news_photo">news photo</string>
    <string name="photo_preview">photo preview</string>
    <string name="app_logo">app logo</string>
</resources>